force-app/main/default/objects/SC_RXPConnectionSettings__c/SC_RXPConnectionSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>SC RXP Connection Settings</label>
</CustomObject>