force-app/main/default/objects/SC_RXPConnectionSettings__c/fields/EnableRXPSync__c.field-meta.xml
<CustomField>
    <fullName>EnableRXPSync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable RXP Sync</label>
    <type>Checkbox</type>
</CustomField>