force-app/main/default/objects/SC_RXPConnectionSettings__c/fields/Token_1__c.field-meta.xml
<CustomField>
    <fullName>Token_1__c</fullName>
    <label>Token_1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>