force-app/main/default/objects/SC_RXPConnectionSettings__c/fields/Token_2__c.field-meta.xml
<CustomField>
    <fullName>Token_2__c</fullName>
    <label>Token_2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>