force-app/main/default/objects/SC_RXPConnectionSettings__c/fields/Token_4__c.field-meta.xml
<CustomField>
    <fullName>Token_4__c</fullName>
    <label>Token_4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>