force-app/main/default/objects/SC_RXPConnectionSettings__c/fields/TokenExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>TokenExpirationDate__c</fullName>
    <label>Token Expiration Date</label>
    <type>DateTime</type>
</CustomField>